--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- header/navbar-->
     <div class="row headerr">
         <div class="col-md-4 links">
-            <a href="#alb">Albumes</a>
+            <a href="#alb">Albumes</a>g
         </div>
         <div class="col-md-4 links">
             <a href="#int">Integrantes</a>
@@ -26,7 +26,7 @@
     <!-- Portada -->
     <div class="row">
         <div class="col-md-12 principal">
-            <img src="/imagenes/portada.jpg" alt="">
+            <img src="imagenes/portada.jpg" alt="">
         </div>
     </div>
     <!--Albumes-->
@@ -56,7 +56,7 @@
         
         <h1 class="titulo" id="int"> Integrantes </h1>
         <div class="col-md-6 ">
-            <img src="/imagenes/patrick.jpg" alt="">
+            <img src="imagenes/patrick.jpg" alt="">
         </div>
         <div class="col-md-6">
             <h5>Patrick Stump</h5>
@@ -70,12 +70,12 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis voluptas consequatur esse quas molestiae alias quisquam, nam saepe rerum reprehenderit veritatis, quasi veniam dignissimos iste.</p>
         </div>
         <div class="col-md-6 ">
-            <img src="/imagenes/peter.jpg" alt="">
+            <img src="imagenes/peter.jpg" alt="">
         </div>
     </div>
     <div class="row integrantes">
         <div class="col-md-6 ">
-            <img src="/imagenes/joe.jpg" alt="">
+            <img src="imagenes/joe.jpg" alt="">
         </div>
         <div class="col-md-6 ">
             <h5>Joe Trohman</h5>
@@ -90,7 +90,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis voluptas consequatur esse quas molestiae alias quisquam, nam saepe rerum reprehenderit veritatis, quasi veniam dignissimos iste.</p>
         </div>
         <div class="col-md-6 ">
-            <img src="/imagenes/andrew.jpg" alt="">
+            <img src="imagenes/andrew.jpg" alt="">
         </div>
     </div>
     <!-- Video -->
