--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Portada -->
     <div class="row">
         <div class="col-md-12 principal">
-            <img src="imagenes/portada.jpg" alt="">
+            <img src="CodoaCodoFront/imagenes/portada.jpg" alt="">
         </div>
     </div>
     <!--Albumes-->
