--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- import Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Fall Out Boy</title>
 </head>
 <body>
 <div class="container-fluid">
     <!-- header/navbar-->
     <div class="row headerr">
         <div class="col-md-4 links">
-            <a href="#alb">Albumes</a>g
+            <a href="#alb">Albumes</a>
         </div>
         <div class="col-md-4 links">
             <a href="#int">Integrantes</a>
@@ -26,7 +26,7 @@
     <!-- Portada -->
     <div class="row">
         <div class="col-md-12 principal">
-            <img src="CodoaCodoFront/imagenes/portada.jpg" alt="">
+            <img src="images/1.jpeg" alt="">
         </div>
     </div>
     <!--Albumes-->
@@ -35,17 +35,17 @@
             Albumes destacados
         </h2>
             <div class="col-md-4 album">
-                <img src="imagenes/album1.png" alt="">
+                <img src="images/album1.png" alt="">
                 <h3>So much for stardust</h3>
                 <button>Escuchar</button>
             </div>
             <div class="col-md-4 album">
-                <img src="imagenes/album2.jpg" alt="">
+                <img src="images/album2.jpg" alt="">
                 <h3>Infinity on high</h3>
                 <button>Escuchar</button>
             </div>
             <div class="col-md-4 album">
-                <img src="imagenes/album3.jfif" alt="">
+                <img src="images/album3.jfif" alt="">
                 <h3>Folie a deux</h3>
                 <button>Escuchar</button>
             </div>
@@ -56,7 +56,7 @@
         
         <h1 class="titulo" id="int"> Integrantes </h1>
         <div class="col-md-6 ">
-            <img src="imagenes/patrick.jpg" alt="">
+            <img src="images/patrick.jpg" alt="">
         </div>
         <div class="col-md-6">
             <h5>Patrick Stump</h5>
@@ -70,12 +70,12 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis voluptas consequatur esse quas molestiae alias quisquam, nam saepe rerum reprehenderit veritatis, quasi veniam dignissimos iste.</p>
         </div>
         <div class="col-md-6 ">
-            <img src="imagenes/peter.jpg" alt="">
+            <img src="images/peter.jpg" alt="">
         </div>
     </div>
     <div class="row integrantes">
         <div class="col-md-6 ">
-            <img src="imagenes/joe.jpg" alt="">
+            <img src="images/joe.jpg" alt="">
         </div>
         <div class="col-md-6 ">
             <h5>Joe Trohman</h5>
@@ -90,7 +90,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis voluptas consequatur esse quas molestiae alias quisquam, nam saepe rerum reprehenderit veritatis, quasi veniam dignissimos iste.</p>
         </div>
         <div class="col-md-6 ">
-            <img src="imagenes/andrew.jpg" alt="">
+            <img src="images/andrew.jpg" alt="">
         </div>
     </div>
     <!-- Video -->
