--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
             <div class="col-md-4 album">
                 <img src="images/album1.png" alt="">
                 <h3>So much for stardust</h3>
-                <button>Escuchar</button>
+                <a href="https://open.spotify.com/album/5mWnMYLnfcnkDOCojHW6O1"><button>Escuchar</button>></a>
             </div>
             <div class="col-md-4 album">
                 <img src="images/album2.jpg" alt="">
                 <h3>Infinity on high</h3>
-                <button>Escuchar</button>
+               <a href="https://open.spotify.com/album/0hHopYqXhuvYSHtVyrcb1g"><button>Escuchar</button>></a>
             </div>
             <div class="col-md-4 album">
                 <img src="images/album3.jfif" alt="">
                 <h3>Folie a deux</h3>
-                <button>Escuchar</button>
+                <a href="https://open.spotify.com/album/6LMC7ZuVNDUQ0tHpGKdd9K"><button>Escuchar</button></a>
             </div>
     </div>
     <!-- Integrantes-->
@@ -107,7 +107,7 @@
         <div class="col-md-12">
             <a href="">Spotify</a>
             <a href="">Youtube</a>
-            <h5>Copyright 20233 Juan Pablo Martinez -  Codo a Codo</h5>
+            <h5>Copyright 2023 Juan Pablo Martinez -  Codo a Codo</h5>
         </div>
     </div>
 </footer>
