--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="col-md-4 album">
                 <img src="images/album1.png" alt="">
                 <h3>So much for stardust</h3>
-                <a href="https://open.spotify.com/album/5mWnMYLnfcnkDOCojHW6O1"><button>Escuchar</button>></a>
+                <a href="https://open.spotify.com/album/5mWnMYLnfcnkDOCojHW6O1"><button>Escuchar</button></a>
             </div>
             <div class="col-md-4 album">
                 <img src="images/album2.jpg" alt="">
                 <h3>Infinity on high</h3>
-               <a href="https://open.spotify.com/album/0hHopYqXhuvYSHtVyrcb1g"><button>Escuchar</button>></a>
+               <a href="https://open.spotify.com/album/0hHopYqXhuvYSHtVyrcb1g"><button>Escuchar</button></a>
             </div>
             <div class="col-md-4 album">
                 <img src="images/album3.jfif" alt="">
